# http-stream-xml

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .pypirc  .travis.yml  AGENTS.md  CLAUDE.md  CNAME  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  activate.sh  build.sh  data.json  dev.sh  entrez.html  genindex.html  index.html  install_local.sh  objects.inv  py-modindex.html  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tasks.py  test.sh  uninstall.sh  upload.sh  xml.html
.doctrees/: entrez.doctree  environment.pickle  index.doctree  xml.doctree
.github/workflows/: ci.yml  docs.yml  pip_publish.yml
_sources/: entrez.rst.txt  index.rst.txt
docs/: Makefile  conf.py  entrez.rst  index.rst  make.bat  xml.rst
htmlcov/: class_index.html  d_4c2d25ad6baa8a6f_http_stream_example_py.html  d_a44f0ac069e85531_test_xml_stream_py.html  d_e58cb71ac55fa608_entrez_example_py.html  d_e58cb71ac55fa608_entrez_py.html  d_e58cb71ac55fa608_socket_stream_py.html  d_e58cb71ac55fa608_version_py.html  d_e58cb71ac55fa608_xml_stream_py.html  function_index.html  index.html  status.json  z_4c2d25ad6baa8a6f_http_stream_example_py.html  z_e58cb71ac55fa608_entrez_py.html  z_e58cb71ac55fa608_socket_stream_py.html  z_e58cb71ac55fa608_version_py.html  z_e58cb71ac55fa608_xml_stream_py.html
http_stream_xml/: LICENSE.txt  __init__.py
httpstreamxml/: entrez.py  entrez_example.py  entrez_socket_example.py  xml_stream.py
scripts/: build.sh  dev.sh  docs.sh  include_pyproject_requirements.py  install_local.sh  test.sh  uninstall.sh  upload.sh  verup.sh
src/http_stream_xml/: __init__.py  entrez.py  entrez_example.py  entrez_socket_example.py  socket_stream.py  xml_stream.py
src/http_stream_xml/examples/: http_stream_example.py  socket_stream_example.py
src/httpstreamxml/: __init__.py  entrez.py  entrez_example.py  entrez_socket_example.py  socket_stream.py
tests/: __init__.py  test_entrez.py  test_example.py  test_socket_stream.py  test_xml_stream.py
