[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "http-stream-xml"
description = "Parse XML in HTTP response on the fly, by chunks - for example NCBI (PubMed) Entrez."
readme = "README.rst"
keywords = [
    "http",
    "stream",
    "xml",
    "chunked",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "requests",
]
dynamic = [
    "version",
]
authors = [
    { name = "Andrey Sorokin", email = "andrey@sorokin.engineer" },
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/andgineer/http-stream-xml"
documentation = "https://http-stream-xml.sorokin.engineer/"

[tool.setuptools]
packages = "find:"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.manifest]
include = [
    "README.rst",
    "LICENSE",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "coveralls",
    "sphinx",
    "pre-commit",
    "pip-tools",
    "hatchling>=1.27.0",
    "invoke>=3.0.3",
    "pyrefly>=0.63.1",
    "tomli-w>=1.2.0",
]

[tool.hatch.version]
path = "src/http_stream_xml/version.py"
